<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.prolog4j</groupId>
  <artifactId>prolog4j-parent</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>prolog4j-parent</name>
  
  <modules>
  	<module>prolog4j-api</module>
    <module>prolog4j-swi</module>
    <module>prolog4j-test</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.prolog4j</groupId>
        <artifactId>prolog4j-api</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	<maven.compiler.source>11</maven.compiler.source>
	<maven.compiler.target>11</maven.compiler.target>
  </properties>
  
</project>
